fix other assets/stylesheets/modules/_paginateWrap.scss

--- a/app/assets/stylesheets/modules/_paginateWrap.scss
+++ b/app/assets/stylesheets/modules/_paginateWrap.scss
@@ -36,12 +36,12 @@ nav.pagination {
     height: 39px;
     border-bottom: #1991ba solid 1px;
     color: #1991ba;
-    cursor: default;
+    cursor: pointer;
     a {
       font-weight: bold;
       height: 39px;
       color: #1991ba;
-      cursor: default;
+      cursor: pointer;
     }
   }
 
